package sir.smarthome.residents;

import java.util.UUID;

public class Animal extends Resident {
    public Animal(String name) {
        super(name, ResidentType.CAT);
    }
}
