package sir.smarthome.residents;

import java.util.UUID;

public class Human extends Resident {
    public Human(String name) {
        super(name, ResidentType.HUMAN);
    }
}
